@@ -12924,6 +12924,10 @@ value_dependent_expression_p (tree expression)
 	 such calls are value-dependent.  */
       return true;
 
+    case MODOP_EXPR:
+      return ((value_dependent_expression_p (TREE_OPERAND (expression, 0)))
+	      || (value_dependent_expression_p (TREE_OPERAND (expression, 2))));
+
     default:
       /* A constant expression is value-dependent if any subexpression is
 	 value-dependent.  */
